<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="20dp"
        android:text="222222t222222222222"
        android:textSize="18sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/editText1"
        android:background="@drawable/edit_normal_shape"
        android:ems="10"
        android:hint="@string/passWordHint"
        android:inputType="textPassword"
        android:padding="5dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="20dp"
        android:text="@string/passWord"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="20dp"
        android:text="222222t222222222222"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="20dp"
        android:text="222222t222222222222"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="29dp"
        android:text="@string/register"
        android:background="@drawable/login_button_shape" />

    <Button
        android:id="@+id/btnRegCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnReg"
        android:layout_alignRight="@+id/btnReg"
        android:layout_below="@+id/btnReg"
        android:layout_marginTop="29dp"
        android:text="@string/cancel" 
        android:background="@drawable/logout_button_shape"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textView1"
        android:background="@drawable/edit_normal_shape"
        android:ems="10"
        android:hint="@string/userNameHint"
        android:padding="5dip"
        android:selectAllOnFocus="true" 
        >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/passWordAgain"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/companyName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignRight="@+id/editText2"
        android:background="@drawable/edit_normal_shape"
        android:ems="10"
        android:hint="@string/passWordHintAgain"
        android:inputType="textPassword"
        android:padding="5dip" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignRight="@+id/editText3"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="18dp"
        android:background="@drawable/edit_normal_shape"
        android:ems="10"
        android:hint="@string/companyNameHint"
        android:padding="5dip" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="68dp"
        android:text="@string/userName"
        android:textSize="18sp" />

</RelativeLayout>